tests/cases/parser/literals/dangling_parenthesis.stderr
error: expected an expression, however received a `)`
 --> $DIR/dangling_parenthesis.hash:3:17
2 |   
3 |   k := (a) + ((b)));
  |                   ^ 
